--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
-spring.application.name=taskmanager
+# ============= BANCO DE DADOS =============
+spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# ============= JPA =============
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# ============= JWT =============
+app.jwt.secret=H6d9!pQs8Vz#1@LmW$y*Xz7NjfRkTq2Ub4ErCy5MnGaZo0P
+app.jwt.expirationMs=86400000
+
+# ============= SWAGGER (CONFIGURAÇÃO MÍNIMA FUNCIONAL) =============
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+
+# Desative o CORS padrão do Spring Boot (opcional)
+spring.web.cors.enabled=false
+
+# Configuração CORS explícita
+spring.mvc.dispatch-options-request=true
